# WebScribe

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  database.py  main.py  models.py  pyproject.toml
.claude/: settings.local.json
.kiro/specs/webscribe/: .config.kiro  design.md  requirements.md  tasks.md
ai_engine/: engine.py  exceptions.py
api/: jobs.py  notes.py  scrape.py  validation.py
denoiser/: cleaner.py  exceptions.py
kb/: writer.py
resources/ui_mockup/: webscribe.py
scrapers/: base.py  dynamic_scraper.py  exceptions.py  static_scraper.py
tests/api/: test_url_validation.py
tests/integration/: test_database_init.py  test_pipeline.py
tests/unit/: test_ai_engine.py  test_denoiser.py  test_kb_writer.py  test_scraper_routing.py
ui/: api_client.py  app.py
ui/pages/: __init__.py  library.py  templates.py  workspace.py
workers/: pipeline.py
